feat: add registration

--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -1,3 +1,5 @@
+include ../mixins/forms.pug
+
 doctype html
 html(lang="ru")
   head
@@ -20,3 +22,12 @@ html(lang="ru")
                 a.nav-link(href=route('newSession'))= t('layouts.application.signIn')
               li.nav-item
                 a.nav-link(href=route('newUser'))= t('layouts.application.signUp')
+    .container.wrapper.flex-grow-1
+
+      each messages, type in reply.flash() || []
+        each message in messages
+          div.alert(class=`alert-${getAlertClass(type)}`)= message
+
+      h1.my-4
+        block header
+      block content
