--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -15,9 +15,14 @@ html(lang="ru")
           span.navbar-toggler-icon
         .collapse.navbar-collapse(id="navbarToggleExternalContent")
           .container-fluid
-            ul.navbar-nav.justify-content-end.w-100
-              li.nav-item.me-auto
+            ul.navbar-nav.mr-auto
+              li.nav-item
                 a.nav-link(href=route('users'))= t('layouts.application.users')
+          ul.navbar-nav
+            if isAuthenticated()
+              li.nav-item
+                +buttonTo(route('session'), 'delete')(class="btn nav-link" value=t('layouts.application.signOut'))
+            else
               li.nav-item
                 a.nav-link(href=route('newSession'))= t('layouts.application.signIn')
               li.nav-item
