--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -14,12 +14,12 @@ html(lang="ru")
         button.navbar-toggler(data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent")
           span.navbar-toggler-icon
         .collapse.navbar-collapse(id="navbarToggleExternalContent")
-          .container-fluid
-            ul.navbar-nav.mr-auto
-              li.nav-item
-                a.nav-link(href=route('users'))= t('layouts.application.users')
-          ul.navbar-nav
+          ul.navbar-nav.justify-content-end.w-100
+            li.nav-item.me-auto
+              a.nav-link(href=route('users'))= t('layouts.application.users')
             if isAuthenticated()
+              li.nav-item
+                a.nav-link(href=route('statuses'))= t('layouts.application.statuses')
               li.nav-item
                 +buttonTo(route('session'), 'delete')(class="btn nav-link" value=t('layouts.application.signOut'))
             else
