--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -11,4 +11,5 @@ block content
         +textarea(task, 'description', errors, 'tasks')(cols="30", rows="3")
         +select(task, 'statusId', errors, 'tasks', statuses)
         +select(task, 'executorId', errors, 'tasks', users)
+        +multipleSelect(task, 'labels', errors, 'tasks', labels)(multiple="multiple")
         +submit(task)(value=t('views.tasks.new.create'))
