--- a/server/views/users/new.pug
+++ b/server/views/users/new.pug
@@ -7,8 +7,8 @@ block content
   .card
     .card-body.p-5.bg-light
       +formFor()(action=route('users') method='post')
-        +input(user, 'firstName', errors)(type="text")
-        +input(user, 'lastName', errors)(type="text")
-        +input(user, 'email', errors)(type="text")
-        +input(user, 'password', errors)(type="password")
+        +input(user, 'firstName', errors, 'users')(type="text")
+        +input(user, 'lastName', errors, 'users')(type="text")
+        +input(user, 'email', errors, 'users')(type="text")
+        +input(user, 'password', errors, 'users')(type="password")
         +submit(user)(value=t('views.users.new.submit'))
