--- a/server/views/labels/edit.pug
+++ b/server/views/labels/edit.pug
@@ -5,7 +5,7 @@ block header
 
 block content
   .card
-    .card-body.p-5.bg-light
-      +formFor()(action=`/labels/${label.id}` method='post')
+    .card-body.p-5.bg-
+      +formFor()(action=route('updateLabels', label.id) method='post')
         +input(label, 'name', errors, 'labels')(type="text")
-        +buttonTo(`/labels/${label.id}`, 'patch')(class="btn btn-primary" value=t('views.labels.edit.change'))
+        +buttonTo(route('updateLabels', label.id), 'patch')(class="btn btn-primary" value=t('views.labels.edit.change'))
