--- a/server/views/session/new.pug
+++ b/server/views/session/new.pug
@@ -7,6 +7,6 @@ block content
   .card
     .card-body.p-5.bg-light
       +formFor()(action=route('session') method='post')
-        +input(signInForm, 'email', errors)(type="text")
-        +input(signInForm, 'password', errors)(type="password")
+        +input(signInForm, 'email', errors, 'session')(type="text")
+        +input(signInForm, 'password', errors, 'session')(type="password")
         +submit(signInForm)(value=t('views.session.new.submit'))
