--- a/server/views/tasks/edit.pug
+++ b/server/views/tasks/edit.pug
@@ -6,10 +6,10 @@ block header
 block content
   .card
     .card-body.p-5.bg-light
-      +formFor()(action=`/tasks/${task.id}` method='post')
+      +formFor()(action=route('updateTask', task.id) method='post')
         +input(task, 'name', errors, 'tasks')(type="text")
         +textarea(task, 'description', errors, 'tasks')(cols="30", rows="3")
         +select(task, 'statusId', errors, 'tasks', statuses)
         +select(task, 'executorId', errors, 'tasks', users)
         +multipleSelect(task, 'labels', errors, 'tasks', labels)(multiple="multiple")
-        +buttonTo(`/tasks/${task.id}`, 'patch')(class="btn btn-primary" value=t('views.tasks.edit.change'))
+        +buttonTo(route('updateTask', task.id), 'patch')(class="btn btn-primary" value=t('views.tasks.edit.change'))
