--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -4,7 +4,7 @@ block header
   = t('views.tasks.header')
 
 block content
-  a.btn.btn-primary.mb-5(href=`tasks/new`)= t('views.tasks.create')
+  a.btn.btn-primary.mb-5(href=route('newTask'))= t('views.tasks.create')
   .card
     .card-body.p-5.bg-light
       +formFor()(action=route('tasks') method='get')
@@ -37,5 +37,5 @@ block content
           td= formatDate(task.createdAt)
           td
             div.d-flex.flex-wrap
-              a.btn.btn-primary.me-1(href=`tasks/${task.id}/edit`)= t('views.tasks.edit.change')
-              +buttonTo(`/tasks/${task.id}`, 'delete')(class="btn btn-danger" value=t('views.tasks.edit.delete'))
+              a.btn.btn-primary.me-1(href=route('editTask', task.id))= t('views.tasks.edit.change')
+              +buttonTo(route('destroyTask', task.id), 'delete')(class="btn btn-danger" value=t('views.tasks.edit.delete'))
