--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -21,5 +21,5 @@ block content
           td= formatDate(user.createdAt)
           td
             div.d-flex.flex-wrap
-              a.btn.btn-primary.me-1(href=`users/${user.id}/edit`)= t('views.users.edit.change')
-              +buttonTo(`/users/${user.id}`, 'delete')(class="btn btn-danger" value=t('views.users.edit.delete'))
+              a.btn.btn-primary.me-1(href=route('editUser', user.id))= t('views.users.edit.change')
+              +buttonTo(route('destroyTask', user.id), 'delete')(class="btn btn-danger" value=t('views.users.edit.delete'))
